--- a/html/reader.html
+++ b/html/reader.html
@@ -185,6 +185,8 @@
             epubPath : "../tests/epubs/the_hound_of_the_baskervilles_igp_epub3_sir_arthur.epub"
         }
     });
+
+    var papu;
 </script>
 
 </body>
