--- a/html/reader.html
+++ b/html/reader.html
@@ -126,6 +126,11 @@
                             Page
                         </button>
                     </li>
+                    <li>
+                        <button type="button" class="flc-epubReader-downloadButton fl-rounded-corners">
+                            Download Book
+                        </button>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -186,7 +191,7 @@
         }
     });
 
-    var papu;
+    var papu, titu, kaku;
 </script>
 
 </body>
