Bookmarks with book editing completed.

--- a/html/reader.html
+++ b/html/reader.html
@@ -83,10 +83,10 @@
                         <tr>
                             <th>Bookmark Identifier</th>
                             <th>Chapter</th>
-                            <th colspan="2">Manage</th>
+                            <th colspan="3">Manage</th>
                         </tr>
                         <tr class="flc-epubReader-bookmark-tableRow">
-                            <td class="flc-epubReader-bookmark-id"></td>
+                            <td class="flc-epubReader-bookmark-title"></td>
                             <td class="flc-epubReader-bookmark-chapter">
                             </td>
                             <td>
@@ -94,6 +94,9 @@
                             </td>
                             <td>
                                 <a  class="flc-epubReader-bookmark-delete"></a>
+                            </td>
+                            <td>
+                                <a  class="flc-epubReader-bookmark-goTo"></a>
                             </td>
                         </tr>
                     </table>
