--- a/html/reader.html
+++ b/html/reader.html
@@ -190,7 +190,7 @@
 
     fluid.epubReader(".fl-epubReader-container",{
         book:{
-            epubPath : "../tests/epubs/the_hound_of_the_baskervilles_igp_epub3_sir_arthur.epub"
+            epubPath : "../download.epub"//tests/epubs/the_hound_of_the_baskervilles_igp_epub3_sir_arthur.epub"
         }
     });
 
