Notes Feature Completed

--- a/html/reader.html
+++ b/html/reader.html
@@ -190,11 +190,9 @@
 
     fluid.epubReader(".fl-epubReader-container",{
         book:{
-            epubPath : "../download.epub"//tests/epubs/the_hound_of_the_baskervilles_igp_epub3_sir_arthur.epub"
+            epubPath : "../tests/epubs/the_hound_of_the_baskervilles_igp_epub3_sir_arthur.epub"
         }
     });
-
-    var papu, titu, kaku;
 </script>
 
 </body>
