--- a/html/reader.html
+++ b/html/reader.html
@@ -168,7 +168,7 @@
 
 <script type="text/javascript">
 
-    // extended to include my custom UI option
+    // extended to include my custom UI option i.e. pageMode
     fluid.staticEnvironment.uiEnhancer = fluid.uiEnhancer(".fl-epubReader-bookContainer", {
         components: {
             pageMode: {
@@ -199,7 +199,6 @@
             epubPath : "../tests/epubs/the_hound_of_the_baskervilles_igp_epub3_sir_arthur.epub"
         }
     });
-    var papu,titu,kaku;
 </script>
 
 </body>
